Traduccion Politica Privacidad y Aviso Legal.

--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -187,7 +187,7 @@
   <!--========= EN CURRENT YEAR TOUR ========= -->
   <!--======================================== -->
 
-  <app-en-currentyeartour [hidden]="currentLang===ESPANOL"></app-en-currentyeartour>
+  <!-- <app-en-currentyeartour [hidden]="currentLang===ESPANOL"></app-en-currentyeartour> -->
   
 
   <!--======================================== -->
