--- a/src/app/layouts/home/home.component.scss
+++ b/src/app/layouts/home/home.component.scss
@@ -534,6 +534,9 @@
 					position: fixed;
 					top: 0;
 					right: 0;
+					margin: 0 auto; 
+					padding: 0;
+					overflow: hidden;
 					//=========== NORMAL SCREEN SIZE ===========//
 					@media only screen and (min-width: 1047px) {
 						width: 40%;
@@ -554,37 +557,48 @@
 						transform: translateX(0); // Mostrar el menú
 					}
 
+					#closeButtonRow {
+						justify-content: right;
+						padding-bottom: 15px;
+					}
+
+
+					// #closeButtonSpace {
+					// 	flex-grow: 1;
+					// }
 
 					#normalScreenHeaderCloseButton {
 
+						width: 12%;
 						color: rgb(118, 204, 61);
 						// background-color: white;
 						border: none;
+						margin-top: 20px;
+						margin-right: 25px;
+
 						
 						//=========== NORMAL SCREEN SIZE ===========//
 						@media only screen and (min-width: 1047px) {
 							margin-top: 20px;
 							margin-right: 25px;
 						}
-						//=========== NORMAL SCREEN SIZE ===========//
-						@media only screen and (min-width: 1047px) {
-							margin-right: 25px;
-						}
-						//=========== NORMAL SCREEN SIZE ===========//
-						@media only screen and (min-width: 1047px) {
-							// margin-right: 15px;
-						}
 						//=========== CELL PHONE SIZE ===========//
 						@media only screen and (max-width: 1046px) {
-							margin-right: 25px;
+							margin-top: 15px;
+							margin-right: 5px;
 						}
 						//=========== CELL PHONE SIZE ===========//
-						@media only screen and (max-width: 415px) {
+						@media only screen and (max-width: 810px) {
+							margin-top: 15px;
 							margin-right: 20px;
 						}
 						//=========== CELL PHONE SIZE ===========//
+						@media only screen and (max-width: 415px) {
+							margin-right: 25px;
+						}
+						//=========== CELL PHONE SIZE ===========//
 						@media only screen and (max-width: 377px) {
-							margin-right: 15px;
+							margin-right: 25px;
 						}
 						
 					} //end cellPhoneHeaderCloseButton
@@ -616,20 +630,33 @@
 								font-size: 1.2rem;
 							}
 							font-weight: bold;
-							color: #333; /* Color del texto */
-							margin-bottom: 16px;
+							color: gray; /* Color del texto */
+							margin-bottom: 10px;
+							padding-left: 10px;
 						}
 
 						hr {
 							//=========== CELL PHONE SIZE ===========//
 							@media only screen and (max-width: 1046px) {
-								margin: 0px 0px 5px 0px;
+								margin: 0px 0px 18px -5px;
 							}
 						}
 						
 						// .list {
 								// list-style-type: none; /* Quitar el estilo predeterminado */
 								// padding: 0;
+
+						.hiddenMenuElement {
+							//=========== NORMAL SCREEN SIZE ===========//
+							@media only screen and (min-width: 1047px) {
+								display: none;
+							}
+							//=========== CELL PHONE SIZE ===========//
+							@media only screen and (max-width: 1046px) {
+								display: block;
+							}	
+						}
+
 							
 						div {
 							//=========== NORMAL SCREEN SIZE ===========//
@@ -641,6 +668,7 @@
 								height: 2.5rem;
 							}
 							margin: 0px 0;
+							padding-left: 10px;
 							// border: rgb(118, 204, 61);
 						
 							a {
@@ -676,10 +704,10 @@
 									// position: relative; /* Asegúrate de establecer una posición relativa al padre */
 									// top: 0px; /* Baja el icono 5px */
 									//=========== CELL PHONE SIZE ===========//
-									@media only screen and (max-width: 1046px) {
-										position: relative; /* Asegúrate de establecer una posición relativa al padre */
-										top: 7px; /* Baja el icono 5px */
-									}
+									// @media only screen and (max-width: 1046px) {
+										// position: relative; /* Asegúrate de establecer una posición relativa al padre */
+										// top: 0px; /* Baja el icono 5px */
+									// }
 								}
 
 							} //end a
