--- a/src/app/shared/prayer-request-modal/prayer-request-modal.component.scss
+++ b/src/app/shared/prayer-request-modal/prayer-request-modal.component.scss
@@ -18,7 +18,8 @@
     display: flex;
     justify-content: center;
     gap: 16px;
-    margin-top: 20px;
+    // margin-top: 20px;
+    padding: 0 0 25px 0;
   }
 
   .cancel-button {
