--- a/src/app/layouts/home/en-currentyeartour/en-currentyeartour.component.scss
+++ b/src/app/layouts/home/en-currentyeartour/en-currentyeartour.component.scss
@@ -7,7 +7,7 @@
 @media only screen and (min-width: 1047px) {
 
 
-        #currentYearTour {
+        #englishCurrentYearTour {
   
             #cellPhoneCurrentYearTourTitle {
                 display: none;
