--- a/src/app/shared/contact-us-modal/contact-us-modal.component.scss
+++ b/src/app/shared/contact-us-modal/contact-us-modal.component.scss
@@ -5,8 +5,11 @@
   .dialog-actions {
       display: flex;
       justify-content: center;
+    //   align-items: center;
       gap: 16px;
-      margin-top: 20px;
+    //   height: 20%;
+    //   margin-top: 10px;
+      padding: 0 0 25px 0;
   }
   
   .cancel-button {
