--- a/src/app/layouts/home/en-currentyeartour/en-currentyeartour.component.scss
+++ b/src/app/layouts/home/en-currentyeartour/en-currentyeartour.component.scss
@@ -115,7 +115,7 @@
   @media only screen and (max-width: 1046px) {
   
   
-        #currentYearTour {
+        #englishCurrentYearTour {
     
     
             #normalScreenCurrentYearTourTitle {
