--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -21,6 +21,19 @@
   <app-team></app-team>
 
 
+  <!--======================================== -->
+  <!--========= TEN YEARS EXPERIENCE ========= -->
+  <!--======================================== -->
+
+  <app-tenyears-experience></app-tenyears-experience>
+
+  
+  <!--======================================== -->
+  <!--============ MISSION VIDEOS ============ -->
+  <!--======================================== -->
+
+  <app-prevyear-video></app-prevyear-video>
+
 
   <!--======================================== -->
   <!--========= ES CURRENT YEAR TOUR ========= -->
@@ -35,12 +48,6 @@
 
   <app-en-currentyeartour [hidden]="translate.currentLang===ESPANOL"></app-en-currentyeartour>
   
-
-  <!--======================================== -->
-  <!--========= TEN YEARS EXPERIENCE ========= -->
-  <!--======================================== -->
-
-  <app-tenyears-experience></app-tenyears-experience>
 
 
 
