--- a/src/app/layouts/home/tenyears-experience/tenyears-experience.component.html
+++ b/src/app/layouts/home/tenyears-experience/tenyears-experience.component.html
@@ -2,7 +2,7 @@
   <!--========= TEN YEARS EXPERIENCE ========= -->
   <!--======================================== -->
 
-  <section id="tenYearsExperience" class="pt-4">
+  <section id="tenYearsExperience" >
 
       <div class="container-fluid">
 
@@ -15,10 +15,10 @@
 
                     <div id="tenYearsRow" class="row">
             
-                        <div id="tenYearsExperienceLelftDiv" class="title3" >
+                        <div id="tenYearsExperienceLelftDiv">
 
                           
-                            <div id="tenYearsExperienceLelftDivContainer">
+                            <div id="tenYearsExperienceLelftDivContainer" class="title3">
 
                                   <!-- <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M50 10C40 10 30 15 25 25C20 35 25 45 30 55C35 65 40 75 50 80C60 75 65 65 70 55C75 45 80 35 75 25C70 15 60 10 50 10Z" fill="green"/>
