--- a/src/app/layouts/home/team/team.component.scss
+++ b/src/app/layouts/home/team/team.component.scss
@@ -1,4 +1,5 @@
 
+@import '../../../../styles/_variables.scss';
 //======================================== //
 //========= NORMAL SCREEN STYLE ========== //
 //======================================== //
@@ -10,7 +11,7 @@
   
       #speakers {
     
-          background-color: #f9f9f9;
+          //background-color: #f9f9f9;
           padding-top: 30px;
       
           #speakersSpaceAtBeginning {
@@ -19,7 +20,11 @@
       
           #speakerTitleFirstLine {
               // font-size: 1.1rem;
-              color: #3f51b5;
+            //   color: #3f51b5;
+            //   color: var(gamaColor6);
+              color: $gamaColor6;
+            //   @extend .textColor6;
+            //   @include gamaTextColor6;
               letter-spacing: 3px;
               margin: 0 auto;
               padding-bottom: 0px;
@@ -61,15 +66,15 @@
                       }
           
                       .warning {
-                          background-color: #f0ad4e; /* Color similar a "badge-warning" */
+                          background-color: $warningBadgeColor; /* Color similar a "badge-warning" */
                       }
                       
                       .success {
-                          background-color: #5cb85c; /* Color similar a "badge-success" */
+                          background-color: $successBadgeColor; /* Color similar a "badge-success" */
                       }
           
                       .info {
-                          background-color: #5bc0de; /* Color similar a "badge-info" */
+                          background-color: $infoBadgeColor; /* Color similar a "badge-info" */
                       }
           
                       hr {
@@ -106,12 +111,15 @@
     
       #speakers {
     
-          background-color: #f9f9f9;
+        //   background-color: #f9f9f9;
           padding-top: 40px;
       
           #speakerTitleFirstLine {
               font-size: 1.1rem;
-              color: #3f51b5;
+            //   color: #3f51b5;
+              color: $gamaColor6;
+            //   @extend .textColor6;
+            //   @include gamaTextColor6;
               letter-spacing: 3px;
               margin: 0 auto;
               padding-bottom: 0px;
@@ -165,15 +173,15 @@
                           }
               
                           .warning {
-                              background-color: #f0ad4e; /* Color similar a "badge-warning" */
+                              background-color: $warningBadgeColor; /* Color similar a "badge-warning" */
                           }
                           
                           .success {
-                              background-color: #5cb85c; /* Color similar a "badge-success" */
+                              background-color: $successBadgeColor; /* Color similar a "badge-success" */
                           }
               
                           .info {
-                              background-color: #5bc0de; /* Color similar a "badge-info" */
+                              background-color: $infoBadgeColor; /* Color similar a "badge-info" */
                           }
               
                           hr {
