--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,10 @@
 
 
 
+@import 'styles/_variables.scss';
+
+
+
 @font-face{
 	font-family: "DMSerifText-Regular";
 	src: url("/assets/fonts/DMSerifText-Regular.ttf")
@@ -65,7 +69,6 @@
 
 
 
-
 /* Scroll bar hidden Edge y Chrome */
 body::-webkit-scrollbar{
 //   display: none;
@@ -86,21 +89,62 @@ body {
 	font-family: Roboto, "Helvetica Neue", sans-serif; 
 }
 
+@mixin gamaTextColor1 {
+	color: $gamaColor1;
+}
+@mixin gamaTextColor5 {
+	color: $gamaColor5;
+}
+
+// .gamaText {
+// 	font-family: 'Playfair Display' !important;
+// 	@include gamaTextColor1;
+// }
+
+
+.textColor1 {
+	color: $gamaColor1;
+}
+
+.textColor2 {
+	color: $gamaColor2;
+}
+
+.textColor3 {
+	color: $gamaColor3;
+}
+
+.textColor4 {
+	color: $gamaColor4;
+}
+
+.textColor5 {
+	color: $gamaColor5;
+}
+
+.textColor6 {
+	color: $gamaColor6;
+}
 
 .headerBackgroundColor {
-	background-color: #f8f6ed;
+	background-color: $gamaColor5;
 }
 
-.headerTextColor {
-	color: rgb(80, 173, 17);
-}
+// .headerTextColor {
+// 	@extend .textColor;
+// }
+
+// .headerTextColor {
+// 	color: $gamaColor1;
+// }
 
 .headerText {
 	font-family: 'Montserrat' !important;
 	// font-family: Arial, Helvetica, sans-serif !important;
 	font-size: 14px; //***** 
     font-weight: normal;
-	color: rgb(80, 173, 17);
+	// @extend .textColor1;
+	color: $gamaColor1;
 }
 
 .title {
@@ -115,14 +159,16 @@ body {
 .title2 {
 	font-family: 'Playfair Display' !important;
 	font-size: 1.5rem;
-	color: #1e2757;
+	// @extend .textColor2;
+	color: $gamaColor2;
 	letter-spacing: 3px;
 }
 
 .title3 {
 	font-family: 'Raleway' !important;
 	font-size: 1.5rem;
-	color: #1e2757;
+	// @extend .textColor2;
+	color: $gamaColor2;
 	letter-spacing: 3px;
 }
 
@@ -141,24 +187,11 @@ body {
 
 
 .highlightText {
-	// color: #f08913;
 
-	// font-weight: bold;
-
-	// background-color: #FFC107; /* Amarillo tipo "warning" de Bootstrap */
-    // padding: 2px 5px;
-    // border-radius: 3px;
-
-	// color: #a7563e; /* Naranja fuerte */
-    // font-weight: bold;
-
-	// text-decoration: underline;
-    // text-decoration-color: #4CAF50; /* Verde vibrante */
-    // font-weight: bold;
-
-	color: #a7563e; /* Naranja fuerte */
+	// @extend .textColor4;
+	color: $gamaColor4;
 	text-decoration: underline;
-    text-decoration-color: #4CAF50; /* Verde vibrante */
+	text-decoration-color: $gamaColor3; /* Verde vibrante */
 	transition: text-shadow 0.3s ease-in-out;
 
 	//Vibracion
@@ -170,219 +203,8 @@ body {
 	text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
 }
 
-
-// Truco para detectar el scroll y activar la animación
-// .vibrating {
-// 	animation: vibrate 0.2s infinite alternate ease-in-out;
-// }
-  
-// @keyframes vibrate {
-//     0% { transform: translate(0, 0); }
-//     25% { transform: translate(-1px, 1px); }
-//     50% { transform: translate(1px, -1px); }
-//     75% { transform: translate(-1px, -1px); }
-//     100% { transform: translate(1px, 1px); }
-// }
-
-
-
-
-
-
-// .navbar-dark .navbar-nav .active > .nav-link,
-// .navbar-dark .navbar-nav .nav-link.active,
-// .navbar-dark .navbar-nav .nav-link.show,
-// .navbar-dark .navbar-nav .show > .nav-link {
-//   color: #fece15;
-//   font-weight: bold;
-// }
-
-// .navbar-dark .navbar-nav .nav-link {
-//   color: #88af27;
-// }
-/*
-#navbar .nav-item .nav-link{
-	color: purple;
+.backgroundColor {
+	background-color: #f9f9f9;
 }
 
 
-#navbar .nav-item .nav-link a:active {
-	color: #ff1100;
-}
-*/
-
-
-/* Identidad*/
-
-// @media only screen and (min-width: 800px) {
-//   #identidad img {
-//     background-color: transparent;
-//     float: left;
-//     margin-right: 25%;
-//   }
-// }
-
-// .text-primary {
-//   color: #88af27 !important;
-// }
-
-/*Botones generales*/
-
-// .text-gama {
-//   color: #88af27 !important;
-//   font-weight: 600;
-// }
-
-// .text-gama:hover {
-//   color: white;
-// }
-
-// .modal-content {
-//   position: relative;
-//   display: -ms-flexbox;
-//   display: flex;
-//   -ms-flex-direction: column;
-//   flex-direction: column;
-//   width: 100%;
-//   pointer-events: auto;
-//   background-color: #ffcc31;
-//   background-clip: padding-box;
-//   border: 1px solid rgba(0, 0, 0, 0.2);
-//   border-radius: 0.3rem;
-//   outline: 0;
-// }
-
-// .modal-footer {
-//   display: -ms-flexbox;
-//   display: flex;
-//   -ms-flex-wrap: wrap;
-//   flex-wrap: wrap;
-//   -ms-flex-align: center;
-//   align-items: center;
-//   -ms-flex-pack: end;
-//   justify-content: flex-end;
-//   padding: 0.75rem;
-//   border-top: none;
-//   border-bottom-right-radius: calc(0.3rem - 1px);
-//   border-bottom-left-radius: calc(0.3rem - 1px);
-// }
-
-// .modal-header {
-//   display: -ms-flexbox;
-//   display: flex;
-//   -ms-flex-align: start;
-//   align-items: flex-start;
-//   -ms-flex-pack: justify;
-//   justify-content: space-between;
-//   padding: 1rem 1rem;
-//   border-bottom: none;
-//   border-top-left-radius: calc(0.3rem - 1px);
-//   border-top-right-radius: calc(0.3rem - 1px);
-// }
-
-// .btn-cancelar {
-//   background-color: #e77137;
-//   color: white;
-//   border-color: transparent;
-// }
-
-// .btn-cancelar:hover {
-//   background-color: #c74808;
-//   color: #fffb04;
-//   border-color: transparent;
-// }
-
-// .btn-platzi {
-//   background-color: #88af27;
-//   color: white;
-// }
-
-// .btn-platzi:hover {
-//   background-color: #638d00;
-//   color: white;
-// }
-
-// .card {
-//   height: 100%;
-// }
-
-// .card img {
-//   height: 348px;
-//   object-fit: cover;
-// }
-
-// #seminario-announcement-banner {
-//   width: 100vw;
-//   height: 95%;
-// }
-
-// #place-time {
-//   background-color: #343a40;
-//   color: white;
-// }
-
-// #place-time img {
-//   max-width: 100%;
-// }
-
-// #badgeRuby {
-//   background-color: red;
-//   color: white;
-// }
-
-// #tour .carousel-inner img {
-//   max-height: 70vh;
-//   object-fit: cover;
-//   filter: grayscale(70%);
-// }
-
-// #carousel {
-//   position: relative;
-// }
-
-// #carousel .overlay {
-//   z-index: 1;
-//   position: absolute;
-//   top: 0;
-//   bottom: 0;
-//   left: 0;
-//   right: 0;
-
-//   background-color: rgba(0, 0, 0, 0.5);
-
-//   color: white;
-// }
-
-// #carousel .overlay .container,
-// #carousel .overlay .row {
-//   height: 100%;
-// }
-
-/*
-body {
-	background: yellow;
-}
-*/
-
-// footer {
-//   background-color: white;
-//   border: 1px solid #fece15;
-// }
-
-// footer a {
-//   color: #88af27;
-// }
-
-// footer a:hover {
-//   color: #fece15;
-//   font-weight: bold;
-//   text-decoration: none;
-// }
-/*
-.a{
-	color: orange;
-}
-.footer {
-	background: linear-gradient(90deg, #1c3643 0, #273b47 50%, #1e5372);
-}
-*/
